--- a/line-reception-agent/Dockerfile
+++ b/line-reception-agent/Dockerfile
@@ -1,1 +1,15 @@
-CMD ["npm", "start"] 
+# ベースイメージ（Node.js 18）
+FROM node:18
+
+# 作業ディレクトリ
+WORKDIR /app
+
+# パッケージファイルをコピーして依存インストール
+COPY package*.json ./
+RUN npm install
+
+# アプリケーションの全ファイルをコピー
+COPY . .
+
+# サーバを起動
+CMD ["npm", "start"]
