--- a/line-reception-agent/Dockerfile
+++ b/line-reception-agent/Dockerfile
@@ -1,5 +1,5 @@
-# ベースイメージ（Node.js 18）
-FROM node:18
+# ベースイメージ（Node.js 18-slim）
+FROM node:18-slim
 
 # 作業ディレクトリ
 WORKDIR /app
@@ -10,6 +10,9 @@ RUN npm install
 
 # アプリケーションの全ファイルをコピー
 COPY . .
+RUN npm run build
+
+EXPOSE 8080
 
 # サーバを起動
 CMD ["npm", "start"]
