--- a/line-reception-agent/Dockerfile
+++ b/line-reception-agent/Dockerfile
@@ -11,16 +11,20 @@ RUN npm install --include=dev
 # アプリケーションの全ファイルをコピー
 COPY . .
 
-# デバッグ用：ファイルの存在確認
-RUN ls -la
-RUN ls -la .mastra/ || echo "No .mastra directory"
+# mastra buildを実行
+RUN npm run build
 
-RUN npm run build && ls -la .mastra/output/
+# ビルド結果の確認
+RUN ls -la .mastra/output/
 
-# デバッグ用：ビルド後の確認
-RUN ls -la .mastra/output/ || echo "Build output not found"
+# 本番用の依存関係のみをインストール
+WORKDIR /app/.mastra/output
+RUN npm ci --only=production
+
+# 作業ディレクトリを戻す
+WORKDIR /app
 
 EXPOSE 8080
 
-# サーバを起動
-CMD ["node", "--import=./.mastra/output/instrumentation.mjs", ".mastra/output/index.mjs"]
+# サーバを起動（mastra startコマンドを使用）
+CMD ["npm", "run", "start"]
