--- a/line-reception-agent/package.json
+++ b/line-reception-agent/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "mastra dev",
     "build": "mastra build",
-    "start": "mastra start"
+    "start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs"
   },
   "keywords": [],
   "author": "",
@@ -22,8 +22,6 @@
     "@mastra/libsql": "^0.10.0",
     "@mastra/loggers": "^0.10.0",
     "@mastra/memory": "^0.10.1",
-    "@types/express": "^4.17.23",
-    "express": "^4.21.2",
     "zod": "^3.25.46"
   },
   "devDependencies": {
