--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,11 +4,11 @@ options:
 steps:
   # Dockerイメージをビルド
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-reception-agent/app:$COMMIT_SHA', './line-reception-agent']
+    args: ['build', '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:$COMMIT_SHA', './line-agent']
 
   # Artifact Registryへpush
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-reception-agent/app:$COMMIT_SHA']
+    args: ['push', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:$COMMIT_SHA']
 
   # Cloud Runへデプロイ
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -16,9 +16,9 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'line-reception-agent'
+      - 'line-agent'
       - '--image'
-      - 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-reception-agent/app:$COMMIT_SHA'
+      - 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:$COMMIT_SHA'
       - '--region'
       - 'asia-northeast1'
       - '--platform'
@@ -26,4 +26,4 @@ steps:
       - '--allow-unauthenticated'
 
 images:
-  - 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-reception-agent/app:$COMMIT_SHA' 
+  - 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:$COMMIT_SHA' 
