--- a/line-agent/package.json
+++ b/line-agent/package.json
@@ -22,6 +22,7 @@
     "@mastra/libsql": "^0.10.3",
     "@mastra/loggers": "^0.10.2",
     "@mastra/memory": "^0.10.4",
+    "@line/bot-sdk": "10.0.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
