--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,18 +3,55 @@ options:
   machineType: 'E2_HIGHCPU_8'  # 並列処理のためにCPU数を増加
 
 steps:
-  # フェーズ1: 全てのDockerイメージを並列でビルド
+  # フェーズ0: 既存のイメージをキャッシュとして取得
+  - name: 'gcr.io/cloud-builders/docker'
+    id: 'pull-cache-line-agent'
+    entrypoint: 'bash'
+    args: ['-c', 'docker pull asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:latest || exit 0']
+
+  - name: 'gcr.io/cloud-builders/docker'
+    id: 'pull-cache-check-subsidy-agent'
+    entrypoint: 'bash'
+    args: ['-c', 'docker pull asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/check-subsidy-agent:latest || exit 0']
+
+  - name: 'gcr.io/cloud-builders/docker'
+    id: 'pull-cache-line-mastra-client'
+    entrypoint: 'bash'
+    args: ['-c', 'docker pull asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/line-mastra-client:latest || exit 0']
+
+  # フェーズ1: 全てのDockerイメージを並列でビルド（キャッシュ使用）
   - name: 'gcr.io/cloud-builders/docker'
     id: 'build-line-agent'
-    args: ['build', '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:$COMMIT_SHA', './line-agent']
+    args: [
+      'build', 
+      '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:$COMMIT_SHA',
+      '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:latest',
+      '--cache-from', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:latest',
+      './line-agent'
+    ]
+    waitFor: ['pull-cache-line-agent']
 
   - name: 'gcr.io/cloud-builders/docker'
     id: 'build-check-subsidy-agent'
-    args: ['build', '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/check-subsidy-agent:$COMMIT_SHA', './check-subsidy-agent']
+    args: [
+      'build', 
+      '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/check-subsidy-agent:$COMMIT_SHA',
+      '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/check-subsidy-agent:latest',
+      '--cache-from', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/check-subsidy-agent:latest',
+      './check-subsidy-agent'
+    ]
+    waitFor: ['pull-cache-check-subsidy-agent']
 
   - name: 'gcr.io/cloud-builders/docker'
     id: 'build-line-mastra-client'
-    args: ['build', '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/line-mastra-client:$COMMIT_SHA', './line-mastra-client']
+    args: [
+      'build', 
+      '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/line-mastra-client:$COMMIT_SHA',
+      '-t', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/line-mastra-client:latest',
+      '--cache-from', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/line-mastra-client:latest',
+      './line-mastra-client'
+    ]
+    waitFor: ['pull-cache-line-mastra-client']
 
   # フェーズ2: 全てのイメージを並列でpush（ビルド完了後）
   - name: 'gcr.io/cloud-builders/docker'
@@ -23,13 +60,28 @@ steps:
     waitFor: ['build-line-agent']
 
   - name: 'gcr.io/cloud-builders/docker'
+    id: 'push-line-agent-latest'
+    args: ['push', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:latest']
+    waitFor: ['build-line-agent']
+
+  - name: 'gcr.io/cloud-builders/docker'
     id: 'push-check-subsidy-agent'
     args: ['push', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/check-subsidy-agent:$COMMIT_SHA']
     waitFor: ['build-check-subsidy-agent']
 
   - name: 'gcr.io/cloud-builders/docker'
+    id: 'push-check-subsidy-agent-latest'
+    args: ['push', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/check-subsidy-agent:latest']
+    waitFor: ['build-check-subsidy-agent']
+
+  - name: 'gcr.io/cloud-builders/docker'
     id: 'push-line-mastra-client'
     args: ['push', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/line-mastra-client:$COMMIT_SHA']
+    waitFor: ['build-line-mastra-client']
+
+  - name: 'gcr.io/cloud-builders/docker'
+    id: 'push-line-mastra-client-latest'
+    args: ['push', 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/line-mastra-client:latest']
     waitFor: ['build-line-mastra-client']
 
   # フェーズ3: check-subsidy-agentを先にデプロイ（line-mastra-clientの依存関係）
@@ -83,12 +135,34 @@ steps:
       - 'managed'
       - '--allow-unauthenticated'
       - '--memory'
-      - '256Mi'
+      - '512Mi'
+      - '--timeout'
+      - '300'
       - '--set-env-vars'
       - 'CHECK_SUBSIDY_AGENT_URL=https://check-subsidy-agent-345333162945.asia-northeast1.run.app,LINE_CHANNEL_ACCESS_TOKEN=$_LINE_CHANNEL_ACCESS_TOKEN,LINE_CHANNEL_SECRET=$_LINE_CHANNEL_SECRET'
     waitFor: ['push-line-mastra-client', 'deploy-check-subsidy-agent']
 
+  # IAMポリシーを明示的に設定
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    id: 'set-iam-line-mastra-client'
+    entrypoint: gcloud
+    args:
+      - 'run'
+      - 'services'
+      - 'add-iam-policy-binding'
+      - 'line-mastra-client'
+      - '--region'
+      - 'asia-northeast1'
+      - '--member'
+      - 'allUsers'
+      - '--role'
+      - 'roles/run.invoker'
+    waitFor: ['deploy-line-mastra-client']
+
 images:
   - 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:$COMMIT_SHA'
+  - 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/app:latest'
   - 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/check-subsidy-agent:$COMMIT_SHA'
+  - 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/check-subsidy-agent:latest'
   - 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/line-mastra-client:$COMMIT_SHA'
+  - 'asia-northeast1-docker.pkg.dev/zenn-hackathon2/line-agent/line-mastra-client:latest'
