--- a/line-mastra-client/package.json
+++ b/line-mastra-client/package.json
@@ -10,6 +10,7 @@
     "@hono/node-server": "^1.18.1",
     "@line/bot-sdk": "^10.0.0",
     "@mastra/client-js": "^0.10.20",
+    "dotenv": "^17.2.1",
     "hono": "^4.8.12"
   },
   "devDependencies": {
