--- a/line-mastra-client/package.json
+++ b/line-mastra-client/package.json
@@ -11,6 +11,7 @@
     "@line/bot-sdk": "^10.0.0",
     "@mastra/client-js": "^0.10.20",
     "dotenv": "^17.2.1",
+    "firebase-admin": "^13.4.0",
     "hono": "^4.8.12"
   },
   "devDependencies": {
