[feat] Implement logic of subsidy details confirmation agent(#63).

--- a/subsidy-details-confirmation-agent/.env.example
+++ b/subsidy-details-confirmation-agent/.env.example
@@ -1,1 +1,5 @@
 GOOGLE_GENERATIVE_AI_API_KEY=
+
+# Subsidy Details Configuration
+SUBSIDY_DATA_SOURCE=json
+SUBSIDY_DETAILS_JSON_PATH=./subsidy-details.json
