--- a/subsidy-details-confirmation-agent/.env.example
+++ b/subsidy-details-confirmation-agent/.env.example
@@ -2,4 +2,4 @@ GOOGLE_GENERATIVE_AI_API_KEY=
 
 # Subsidy Details Configuration
 SUBSIDY_DATA_SOURCE=json
-SUBSIDY_DETAILS_JSON_PATH=./subsidy-details.json
+SUBSIDY_DETAILS_JSON_DIR="./subsidy-details"
