--- a/format_data/pyproject.toml
+++ b/format_data/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "google>=3.0.0",
+    "google-generativeai>=0.8.5",
     "langchain>=0.3.26",
-    "langchain-google-genai>=2.1.8",
+    "numpy>=2.3.1",
     "pandas>=2.3.1",
     "python-dotenv>=1.1.1",
 ]
