--- a/line-mastra-client/package.json
+++ b/line-mastra-client/package.json
@@ -7,9 +7,11 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@google/genai": "^1.15.0",
     "@hono/node-server": "^1.18.1",
     "@line/bot-sdk": "^10.0.0",
     "@mastra/client-js": "^0.10.20",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.1",
     "firebase-admin": "^13.4.0",
     "hono": "^4.8.12",
